# booru-downloader

./: Cargo.toml  LICENSE
bruno-api-collection/: dambooru.bru  danbooru.bru  nekos.moe.bru  yande.re.bru
src/: main.rs
src/api/: mod.rs  requests.rs  yandere.rs
src/files/: cache_save_load.rs  config_parse.rs  default_config.lua  fs_api.rs  mod.rs
src/models/: api_responses.rs  mod.rs  yandere.rs
