[package]
name = "booru-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = "0.12"

fastrand = "2.3.0"
strfmt = "0.2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.228"

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
